@@ -15,6 +15,8 @@ v3.4.3 to
 - (fix) Don't correct the feature of a var. or random 2 to match the
   preceding action 1.
 - Industry production callback version 1.
+- Produce a useful error message when data files are out of sync with each
+  other.
 
 v3.4.2 to v3.4.3 (r1244)
 - Permit Action 1/2/3 for bridges (Callback 33)
